--- a/src/css/create.css
+++ b/src/css/create.css
@@ -41,20 +41,20 @@
         justify-content: center;
         width: 100%;
         min-height: 100%;
-        padding: 20px;
+        padding: 90px;
       }
       
       #formContent {
         -webkit-border-radius: 10px 10px 10px 10px;
-        border-radius: 10px 10px 10px 10px;
-        background: #fff;
+        border-radius: 20px 20px 20px 20px;
+        background: #e9ecef;
         padding: 30px;
         width: 90%;
         max-width: 450px;
         position: relative;
         padding: 0px;
-        -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
-        box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+        -webkit-box-shadow: 0 0px 0px 0 rgba(0,0,0,0.3);
+        box-shadow: 0 00px 00px 0 rgba(0,0,0,0.3);
         text-align: center;
       }
       
@@ -95,7 +95,7 @@
         text-transform: uppercase;
         font-size: 13px;
         -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
-        box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+        box-shadow: 0 00px 00px 0 rgba(95,186,233,0.4);
         -webkit-border-radius: 5px 5px 5px 5px;
         border-radius: 5px 5px 5px 5px;
         margin: 5px 20px 40px 20px;
@@ -128,7 +128,7 @@
         display: inline-block;
         font-size: 16px;
         margin: 5px;
-        width: 85%;
+        width: 80%;
         border: 2px solid #f6f6f6;
         -webkit-transition: all 0.5s ease-in-out;
         -moz-transition: all 0.5s ease-in-out;
@@ -208,11 +208,7 @@
         animation-duration:1s;
       }
       
-      .fadeIn.first {
-        -webkit-animation-delay: 0.4s;
-        -moz-animation-delay: 0.4s;
-        animation-delay: 0.4s;
-      }
+    
       
       .fadeIn.second {
         -webkit-animation-delay: 0.6s;
