es-peixe concluída

--- a/views/_css/style.css
+++ b/views/_css/style.css
@@ -266,13 +266,9 @@ input[type="text"]:placeholder {
   width: 100%;
 }
 
-.container-peixe {
-  width: 1060px;
-  height: 90px;
-}
-
 .esp-peixe {
-  background-color: #56baed;
+  background-image: url(../_images/esp-peixe.png);
+  background-size: cover;
 }
 
 /* OTHERS */
