--- a/views/_css/style.css
+++ b/views/_css/style.css
@@ -88,6 +88,16 @@
     border-color:rgb(108,117,125);
     border-radius: 0px 0px 150px 150px;
     border-top-width: 0px;
+    }
+
+    .navbar-brand {
+      padding: 0px; /* firefox bug fix */
+    }
+    .navbar-brand>img {
+      height: 100%;
+      padding: 8px 20px; /* firefox bug fix */
+      width: auto;
+    }
 
 
  
