--- a/views/_vendors/upload_ajax/CSS/uploadfilemulti.css
+++ b/views/_vendors/upload_ajax/CSS/uploadfilemulti.css
@@ -1,64 +1,3 @@
-
-
-.cabecalho {
-  padding: 1rem;
-  margin-bottom: 0rem;
-  background-color:#F5F5F5;
-  border-radius: 50px 8px 8px 0px;
-}
-
-.esp-peixe {
-  background-image: url(../_images/esp-peixe.png);
-  background-size: cover;
-}
-
-.linha-peixe {
-  min-height: 33px;
-}
-
-.backgroundR{ background-color:rgb(255, 253, 248); }
-
-.backgroundRBOX{ background-color:rgba(226, 218, 218, 0.178); }
-
-.backgroundS{ background-color: #E0EDFE }
-
-#bordasRNC{  
-  border:solid 2px;
-  border-color:#FFD700;
-  border-radius:150px;
-  border-top-width: 0px;
-}
-
-#bordasAcao{  
-  border:solid 2px;
-  border-color:rgb(174, 188, 199);
-  border-radius:1px; 
-}
-
-#bordasSACP{  
-  border:solid 2px;
-  border-color:rgb(0,110,255);
-  border-radius: 150px;
-  border-top-width: 0px;
-}
-
-#bordasFRONT{  
-  border:solid 1px;
-  border-color:rgb(218, 221, 223);
-  border-radius: 0px 0px 80px 80px;
-  border-top-width: 0px;
-}
-
-.navbar-brand {
-  padding: 0px; /* firefox bug fix */
-}
-
-.navbar-brand>img {
-  height: 100%;
-  padding: 8px 20px; /* firefox bug fix */
-  width: auto;
-}
-
 .upload-statusbar {
 width: auto;
 margin: 10px;
@@ -112,7 +51,7 @@ top: 3px;
 
 }
 .upload-red {
-background: url(../_images/loading.gif);
+background: url(../img/loading.gif);
 background-repeat: no-repeat;
 background-size: 25px;
 margin-top:-1px;
@@ -127,7 +66,7 @@ vertical-align: top;
 
 }
 .upload-green {
-background: url(../_images/ok.png);
+background: url(../img/ok.png);
 background-repeat: no-repeat;
 background-size: 18px;
 height: 18px;
@@ -145,8 +84,9 @@ vertical-align: top;
 
 
 .upload {
-	background-color: rgb(255, 179, 38);
-    color: rgb(0, 0, 0);
+	background-color: #68B3C8;
+    color: #FFFFFF;
+    box-shadow: 0 2px 2px 0 rgba(0, 188, 212, 0.14), 0 3px 1px -2px rgba(0, 188, 212, 0.2), 0 1px 5px 0 rgba(0, 188, 212, 0.12);
     border: none;
     border-radius: 3px;
     position: relative;
@@ -161,7 +101,7 @@ vertical-align: top;
     display: inline-block;
     padding: 6px 12px;
     margin-bottom: 0;
-    font-size: 11px;
+    font-size: 14px;
     font-weight: 400;
     line-height: 1.42857143;
     text-align: center;
@@ -182,8 +122,9 @@ vertical-align: top;
   
 
 .upload:hover {
-    background-color:  rgb(216, 136, 25);
-    color: rgb(0, 0, 0);
+    background-color: #429cb6;
+    color: #FFFFFF;
+    border-color: #429cb6;
     opacity: 1;
 }
 
@@ -194,15 +135,3 @@ vertical-align: top;
     border: 0 none;
     outline: 0;
 }
-
-
-    
-
-
-   
-
-
-
-
-
-
